Refaktorering
- Rydd litt opp i henting av behandlinger fra fagsak
- Bruk konsekvent navngivning
- Fjern unødvendige kommentarer